Refactor project output services to reduce constructor parameter count in ProjectProcessor